<resources>
    <string name="app_name">Color launcher</string>
    <string name="dev_email">roy93group@gmail.com</string>
    <string name="crash_email_subject">Color launcher: crash log</string>
    <string name="cinta_launcher_crashed">Color launcher crashed</string>
    <string name="send_bug_report">Send bug report</string>
    <string name="read_more_at_source">More at %s</string>
    <string name="search_in_duckduckgo">Search on DuckDuckGo</string>
    <string name="done">Done</string>
    <string name="now">now</string>
    <plurals name="x_notifications">
        <item quantity="few">%1$d notifications</item>
        <item quantity="many">%1$d notifications</item>
        <item quantity="one">%1$d notification</item>
        <item quantity="other">%1$d notifications</item>
        <item quantity="two">%1$d notifications</item>
    </plurals>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="scrollbar_controller">App sorting</string>
    <string name="reshape_adaptive_icons">Reshape adaptive icons</string>
    <string name="reshape_adaptive_icons_explanation">Attempts to remove icon backgrounds without messing them up</string>
    <string name="icon_packs">Icon packs</string>
    <string name="chosen">Chosen</string>
    <string name="available">Available</string>
    <string name="system">System</string>
    <string name="back_symbol">⭅</string>
    <string name="permissions">⭅ Permissions</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_storage_explanation">To adjust theme colors to the wallpaper &amp; for background blur</string>
    <string name="permission_contacts">Contacts</string>
    <string name="permission_contacts_explanation">Contacts can be displayed in the search screen</string>
    <string name="permission_notifications">Notifications</string>
    <string name="permission_notifications_explanation">For displaying notifications &amp; a media player in your feed</string>
    <string name="permission_usage_access">Usage access</string>
    <string name="permission_usage_access_explanation">Cinta will see which apps you use, to improve the app suggestions</string>
    <string name="no_feed_items">Nothing here</string>
    <string name="next">Next</string>
    <string name="pls_grant_permission_first">Please grant these permission first</string>
    <string name="pls_read_policy_first">Please read the terms and conditions first</string>
    <string name="setting">Setting</string>
    <string name="alphabetic">Alphabetic</string>
    <string name="by_hue">By hue</string>
    <string name="app_sorting">App sorting</string>
    <string name="get_more_themes">Get more themes</string>
    <string name="read_policy">By clicking here, I state that I have read and understood the terms and conditions.</string>
    <string name="choose_launcher">Choose launcher</string>
    <string name="default_home_app">Default home app</string>
    <string name="other">Other</string>
    <string name="theme">Theme</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="rate_5_stars">If you enjoy using Color launcher, would you mind taking a moment to rate it? It will not take more than a minute. Thanks for your support!</string>
    <string name="pick_your_favorite_color">Pick your favorite color</string>
    <string name="pick_your_favorite_color_showcase">Next, pick your favorite color</string>
    <string name="pick_your_favorite_color_background">Pick your favorite color for setting wallpaper</string>
    <string name="the_color_launcher_will_be_restarted">The Color launcher will be restarted</string>
    <string name="color">Main color</string>
    <string name="color_background">Background color</string>
    <string name="missing_a_feature">Missing a feature?</string>
    <string name="missing_a_feature_msg">Anything you\'re missing in our product? Drop a message here to let us know!</string>
    <string name="app_info">App info</string>
    <string name="uninstall">Uninstall</string>
    <string name="play_store">Play store</string>
    <string name="custom_app_drawer">Custom app drawer</string>
    <string name="dynamic_drawer_for_your_apps">Dynamic drawer for your apps.</string>
    <string name="orientation">Orientation</string>
    <string name="rotate">Rotate</string>
    <string name="radius_format">Radius: %1$d</string>
    <string name="peek_format">Peek: %1$d</string>
    <string name="gravity">Gravity</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="pick_your_choice">Pick your choice</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="default_value">Reset all values</string>
    <string name="home_page">Home page</string>
    <string name="smart_search">Smart search</string>
    <string name="enable_search_when_scroll_to_top">Open the search page when you scroll to the top</string>
    <string name="display_app_icon">Display app\'s icon</string>
    <string name="force_color_app_icon">Force tint color for all icons</string>
    <string name="err_same_color">These two colors cannot be the same. Please choose other color.</string>
    <string name="restart_color_launcher">Restart Color Launcher</string>
    <string name="restart_color_launcher_des">Use if you run into problems with the application</string>
    <string name="about">About</string>
    <string name="about_color_launcher">About Color Launcher</string>
    <string name="about_color_launcher_des">Version, purchase status, contacts</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_des">List of changes in the lasted version of the application</string>
    <string name="changelog_detail">\n
        \n✪ Version: 2023.09.04
        \n- Bug fixed.
        \n- Android 14 supported.
        \n- Performances improved,
        \n-----\n
        \n✪ Version: 2023.03.04
        \n- Added feature lock/unlock app by using biometric
        \n-----\n
        \n✪ Version: 2023.02.04
        \n- Added physics-based bouncy overscroll effect
        \n- Added feature on/off smart search
        \n-----
        \n✪ Version: 2023.01.10
        \n- Auto color changer
        \n- Config always hide filter views on Home page
        \n- Added animated stars view
        \n- Added module Leak Canary
        \n- Added showcase
        \n- Performances improved
        \n-----
        \n✪ Version: 2023.01.02
        \n- Bug fixed
        \n- Add new screen to config background color
        \n- Add new screen About Color launcher
        \n-----
        \n✪ Version: 2022.12.29
        \n- Bug fixed
        \n- Performances improved
        \n-----
        \n✪ Version: 2022.12.18
        \n- Publish first version into PlayStore
    </string>
    <string name="hall_of_fame">Hall of Fame</string>
    <string name="hall_of_fame_des">Thank to everyone who helped make the application better</string>
    <string name="hall_of_fame_detail">\n
        \n✪ Tran Phu Loi
        \n- The main developer
        \n- Support on Patreon
        \n-----
        \n✪ Doan Thi Kim Quyen
        \n- Beta testing, ideas
        \n- Thai translation
    </string>
    <string name="contact_the_dev">Contact the developer</string>
    <string name="contact_the_dev_des">Email: www.muathu@gmail.com\nFacebook: https://www.facebook.com/loitp93/</string>
    <string name="auto_color">Set auto color changes</string>
    <string name="ad_des">We need ads, just like you need Color Launcher for your daily life.
        \nWe will work to make you happy when using Color Launcher.
        \nSincerely thank.</string>
    <string name="display_filter_view">Display filter view</string>
    <string name="display_filter_view_des">Display some components such as Home, Today, Notifications, News…</string>
    <string name="hi_guys_this_is_color_launcher">Hi guys, this is your new launcher</string>
    <string name="great_choice">Great choice!</string>
    <string name="show_case_bottom_bar">✪ Tap anywhere to search\n✪ Tap the left icon to open setting\n✪ Tap the right icon to open/close your app drawer\n✪ Long press the right icon to quick scroll</string>
    <string name="unlock_app">Unlock app</string>
    <string name="lock_app">Lock app</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="github">Github</string>
    <string name="checkout_the_source_codes">Checkout the source codes.</string>
</resources>
