<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions" />

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage_explanation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_storage"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tick_storage"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Tick"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_contacts" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_contacts_explanation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_contacts"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tick_contacts"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Tick"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notifications" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notifications_explanation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_notifications"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tick_notifications"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Tick"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_usage_access" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_usage_access_explanation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_usage_access"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tick_usage_access"
                style="@style/Theme.AppLauncher.Intro.Slash.Permissions.Item.Tick"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
