<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:textSize="@dimen/txt_50"
            android:textStyle="bold"
            tools:textColor="@color/colorTest" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStorageDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage_explanation"
                android:textSize="@dimen/txt_small"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:paddingHorizontal="@dimen/margin_padding_medium"
                android:text="@string/grant_permissions"
                android:textSize="@dimen/txt_medium"
                android:textStyle="bold"
                tools:background="@drawable/ripple_color_test"
                tools:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tickStorage"
                android:layout_width="@dimen/w_50"
                android:layout_height="@dimen/w_50"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:tint="@color/colorTest"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_contacts"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContactsDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_contacts_explanation"
                android:textSize="@dimen/txt_small"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:paddingHorizontal="@dimen/margin_padding_medium"
                android:text="@string/grant_permissions"
                android:textSize="@dimen/txt_medium"
                android:textStyle="bold"
                tools:background="@drawable/ripple_color_test"
                tools:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tickContacts"
                android:layout_width="@dimen/w_50"
                android:layout_height="@dimen/w_50"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:tint="@color/colorTest"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notifications"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotificationsDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notifications_explanation"
                android:textSize="@dimen/txt_small"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:paddingHorizontal="@dimen/margin_padding_medium"
                android:text="@string/grant_permissions"
                android:textSize="@dimen/txt_medium"
                android:textStyle="bold"
                tools:background="@drawable/ripple_color_test"
                tools:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tickNotifications"
                android:layout_width="@dimen/w_50"
                android:layout_height="@dimen/w_50"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:tint="@color/colorTest"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUsageAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_usage_access"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUsageAccessDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_usage_access_explanation"
                android:textSize="@dimen/txt_small"
                tools:textColor="@color/colorTest" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonUsageAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:paddingHorizontal="@dimen/margin_padding_medium"
                android:text="@string/grant_permissions"
                android:textSize="@dimen/txt_medium"
                android:textStyle="bold"
                tools:background="@drawable/ripple_color_test"
                tools:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tickUsageAccess"
                android:layout_width="@dimen/w_50"
                android:layout_height="@dimen/w_50"
                android:src="@drawable/ic_tick"
                android:visibility="gone"
                tools:tint="@color/colorTest"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
