<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_medium"
    tools:background="@color/color_test_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_symbol"
        android:textSize="@dimen/txt_50"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/color_test_primary" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/w_100"
        android:layout_height="@dimen/w_100"
        android:src="@drawable/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/tv"
        app:layout_constraintStart_toStartOf="parent"
        tools:tint="@color/color_test_primary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/txt_50"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDes"
        tools:textColor="@color/color_test_primary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_your_favorite_color"
        android:textSize="@dimen/txt_medium"
        app:layout_constraintBottom_toTopOf="@+id/colorPicker"
        tools:textColor="@color/color_test_primary" />

    <com.loitp.picker.shiftColor.LineColorPicker
        android:id="@+id/colorPicker"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_55"
        android:layout_marginTop="@dimen/margin_padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lcpOrientation="horizontal"
        app:lcpSelectedColorIndex="0" />
</androidx.constraintlayout.widget.ConstraintLayout>
