<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:cardBackgroundColor="@color/color_test_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_padding_small"
        android:paddingBottom="@dimen/margin_padding_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSlider"
            android:layout_width="@dimen/w_50"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:tint="@color/color_test_primary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_medium"
            android:layout_marginEnd="@dimen/margin_padding_medium"
            android:text="@string/app_info"
            android:textSize="@dimen/txt_50"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivSlider"
            tools:textColor="@color/color_test_primary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_baseline_file_copy_24"
            android:drawablePadding="@dimen/margin_padding_small"
            android:gravity="center|start"
            android:paddingStart="@dimen/margin_padding_medium"
            android:paddingTop="@dimen/margin_padding_small"
            android:paddingEnd="@dimen/margin_padding_medium"
            android:paddingBottom="@dimen/margin_padding_small"
            android:textSize="@dimen/txt_small"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:drawableTint="@color/color_test_primary"
            tools:text="@string/app_name"
            tools:textColor="@color/color_test_primary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAppSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_small"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/margin_padding_medium"
            android:paddingEnd="@dimen/margin_padding_medium"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_medium"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvInfo"
            tools:textColor="@color/color_test_primary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btPlayStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_small"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/margin_padding_medium"
            android:paddingEnd="@dimen/margin_padding_medium"
            android:text="@string/play_store"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_medium"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btAppSetting"
            tools:textColor="@color/color_test_primary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btUninstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_small"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/margin_padding_medium"
            android:paddingEnd="@dimen/margin_padding_medium"
            android:text="@string/uninstall"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_medium"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btPlayStore"
            tools:textColor="@color/color_test_primary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
